# DiDYMOS_UWB

./: LICENSE  README.md
Cesium_visualisation_app/: README.md  history_cesium_public.html
object_detection/: README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  setup.cfg
object_detection/src/: variables.env
object_detection/src/api/: Dockerfile  README.md  logging.yaml  requirements.txt  rest_server.py
object_detection/src/api/api/: config.py  dependencies.py
object_detection/src/api/api/database/: __init__.py  connection.py  enums.py  exceptions.py
object_detection/src/api/api/database/model/: __init__.py  base.py  video.py
object_detection/src/api/api/database/services/: __init__.py  base.py  video.py
object_detection/src/api/api/errors/: __init__.py  error_messages.py
object_detection/src/api/api/routes/: __init__.py  video.py
object_detection/src/api/api/schemas/: __init__.py  mics.py  video.py
object_detection/src/api/api/services/: __init__.py  base.py  video.py  workers.py
object_detection/src/api/scripts/: DIDYMOS.postman_collection.json  test_config.py  test_predictions.py
object_detection/src/commonlib/: setup.cfg
object_detection/src/commonlib/commonlib/: error_messages.py  io.py  log.py
object_detection/src/commonlib/commonlib/task_queue/: __init__.py  models.py  pika_connection.py  pika_publisher.py
object_detection/src/tracking_worker/: Dockerfile  Dockerfile_dev  logging.yaml  requirements.txt  requirements_dev.txt  worker.py
object_detection/src/tracking_worker/worker/: calibration.py  georegistration.py
(+8 files in other folders)
