### Package Build ###
[metadata]
name = didymos
# description = "..."
long_description = file: README.md
version = 0.1.0

[options]
packages = didymos
python_requires = >=3.8
install_requires =
    numpy~=1.22.4
    opencv-python~=4.5.5.64
    tqdm~=4.64.0

### Code Quality ###
[flake8]
max-line-length = 100
extend-ignore =
    E203,
# See https://github.com/PyCQA/pycodestyle/issues/373
    E402,
# Module level import not at top of file
    D100,
# Missing docstring in public module
    D101,
# Missing docstring in public class
    D104,
# Missing docstring in public package
    D105,
# Missing docstring in magic method
    D107,
# Missing docstring in __init__
    D401,
# First line should be in imperative mood; try rephrasing
exclude =
    .git
    __pycache__
    .ipynb_checkpoints
    dist
    build
