[metadata]
name = commonlib
version = 1.0.1
description = Package with common methods from API and worker applications.

[options]
python_requires = >=3.8
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    pika>=1.3.1
    numpy>=1.23.1
    scipy>=1.8.1
    Pillow>=9.2.0
    PyYAML>=6.0
    pydantic>=1.10.4
